fix: placeholder alignment

--- a/src/client/DocumentEditor.css
+++ b/src/client/DocumentEditor.css
@@ -24,3 +24,7 @@
   color: var(--editor-whitespace-color);
   word-break: break-all;
 }
+
+.cm-editor .cm-placeholder {
+  display: inline;
+}
